--- a/data/projects.yml
+++ b/data/projects.yml
@@ -1,19 +1,14 @@
-- name: Longest Word Game
-  description: Decent description of the app
-  image: projects/placeholder.png
-  url: https://www.google.com
+- name: Sinta
+  description: A hiring platform intended to help recruiting teams make quicker hiring decisions with less bias. An MVC application developed as a group of 4. Utilized - JavaScript, HTML, SCSS, Ruby on Rails, Bootstrap, PostgreSQL, Slack API
+  image: projects/sinta_homepage.png
+  url: https://sintaapp.com/
 
-- name: Movie Watchlist
-  description: Decent description of the app
-  image: projects/placeholder.png
-  url: https://www.google.com
+- name: KiSpace
+  description: KiSpace is a bnb style project for the rental of event spaces. Utilized - JavaScript, HTML, CSS, Sinatra, Ruby on Rails, Bootstrap, PostgreSQL, Mapbox API
+  image: projects/KiSpace_homepage.png
+  url: https://kispace.herokuapp.com/
 
-- name: Airbnb
-  description: Decent description of the app
+- name: Movie Select
+  description: Application to create lists of movies.
   image: projects/placeholder.png
-  url: https://www.google.com
-
-- name: Final project
-  description: Decent description of the app
-  image: projects/placeholder.png
-  url: https://www.google.com
+  url:
